# mcserverd

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
conf/: Makefile.am  Makefile.in  mcserverd.conf
src/: Makefile.am  Makefile.in  main.c
src/common/: common.h  list.c  list.h  queue.h
src/config/: config.c  config.h  ini.c  ini.h
src/log/: log.c  log.h
src/network/: connections.h  network.c  network.h  session.c  session.h  ssh.h
src/server/: cmdline.c  cmdline.h  game-server.c  game-server.h  server.c  server.h
