bin_PROGRAMS = mcserverd
mcserverd_SOURCES = main.c \
						common/list.c \
						config/config.c \
						config/ini.c \
						log/log.c \
						network/connections.c \
						network/network.c \
						network/session.c \
						server/game-server.c \
						server/server.c \
						server/cmdline/cmdline.c
